--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,9 @@ body {
 @media (max-width: 768px) {
   .header {
     padding: 10px 40px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
   }
 }
 
@@ -32,7 +35,7 @@ body {
 
 @media (max-width: 768px) {
   .header-scroll {
-    padding: 10px 40px;
+    padding: 20px 40px;
   }
 }
 
