--- a/src/App.css
+++ b/src/App.css
@@ -12,11 +12,12 @@ body {
   justify-content: space-between;
   align-items: center;
   text-align: center;
-  background-color: #000;
+  background-color: #0d0c0c;
   padding: 20px 200px;
   color: #fff;
   position: sticky;
   top: 0;
+  min-height: 80px;
 }
 
 @media (max-width: 768px) {
@@ -49,6 +50,10 @@ body {
   text-align: center;
 }
 
+.company-name {
+  font-family: "Dancing Script", cursive;
+}
+
 .link {
   border-bottom: 3px solid #ebdee3;
   transition: all 0.25s linear;
@@ -61,7 +66,6 @@ body {
   display: block;
   width: 100%;
   height: 3px;
-
   background-color: #a20916;
   position: absolute;
   left: 0;
@@ -73,6 +77,28 @@ body {
 }
 .link:hover:before {
   transform: scale(1);
+}
+
+.hero-page {
+  background-color: #191616;
+}
+
+.desc-page {
+  background-color: #191616;
+}
+
+.feature-page {
+  background-color: #0d0c0c;
+}
+
+.footer {
+  background-color: #0d0c0c;
+  height: 60px;
+}
+
+.error-page {
+  height: calc(100vh - 80px - 60px);
+  background-color: #191616;
 }
 
 hr {
